<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        android:fitsSystemWindows="true"
        android:stateListAnimator="@null"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:minHeight="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/notification"
            app:theme="@style/ThemeOverlay.Muazzin.Toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/fajr_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fajr"
                app:layout_constraintBottom_toBottomOf="@+id/notification_fajr"
                app:layout_constraintEnd_toStartOf="@+id/notification_fajr"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/notification_fajr" />

            <Spinner
                android:id="@+id/notification_fajr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sunrise_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sunrise"
                app:layout_constraintBottom_toBottomOf="@+id/notification_sunrise"
                app:layout_constraintEnd_toStartOf="@+id/notification_sunrise"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/notification_sunrise" />

            <Spinner
                android:id="@+id/notification_sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notification_fajr" />

            <TextView
                android:id="@+id/dhuhr_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dhuhr"
                app:layout_constraintBottom_toBottomOf="@+id/notification_dhuhr"
                app:layout_constraintEnd_toStartOf="@+id/notification_dhuhr"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/notification_dhuhr" />

            <Spinner
                android:id="@+id/notification_dhuhr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notification_sunrise" />

            <TextView
                android:id="@+id/asr_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/asr"
                app:layout_constraintBottom_toBottomOf="@+id/notification_asr"
                app:layout_constraintEnd_toStartOf="@+id/notification_asr"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/notification_asr" />

            <Spinner
                android:id="@+id/notification_asr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notification_dhuhr" />

            <TextView
                android:id="@+id/maghrib_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/maghrib"
                app:layout_constraintBottom_toBottomOf="@+id/notification_maghrib"
                app:layout_constraintEnd_toStartOf="@+id/notification_maghrib"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/notification_maghrib" />

            <Spinner
                android:id="@+id/notification_maghrib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notification_asr" />

            <TextView
                android:id="@+id/ishaa_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ishaa"
                app:layout_constraintBottom_toBottomOf="@+id/notification_ishaa"
                app:layout_constraintEnd_toStartOf="@+id/notification_ishaa"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/notification_ishaa" />

            <Spinner
                android:id="@+id/notification_ishaa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notification_maghrib" />

            <Button
                android:id="@+id/reset_settings"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                android:text="@string/reset"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notification_ishaa" />

            <Button
                android:id="@+id/save_settings"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/reset_settings" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
