<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent" android:layout_width="fill_parent"
    android:orientation="vertical" android:background="@drawable/appwidget_background"
    android:id="@+id/widget_timetable" android:focusable="true"
    android:clickable="true">
    <LinearLayout android:layout_height="fill_parent"
        android:layout_width="fill_parent" android:orientation="vertical">
        <LinearLayout android:layout_height="fill_parent"
            android:layout_width="fill_parent" android:orientation="horizontal">
            <LinearLayout android:layout_height="fill_parent"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
                android:layout_width="0px" android:orientation="vertical"
                android:gravity="fill_horizontal" android:layout_weight="3">
                <TextView android:text="@string/fajr" android:id="@+id/fajr_text"
                android:textSize="12sp"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@android:color/black" android:layout_weight="1"
                    android:gravity="fill_vertical" android:singleLine="true" />
                <TextView android:text="@string/sunrise" android:id="@+id/sunrise_text"
                android:textSize="12sp"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@android:color/black" android:layout_weight="1"
                    android:gravity="fill_vertical" android:singleLine="true" />
                <TextView android:text="@string/dhuhr" android:id="@+id/dhuhr_text"
                android:textSize="12sp"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@android:color/black" android:layout_weight="1"
                    android:gravity="fill_vertical" android:singleLine="true" />
                <TextView android:text="@string/asr" android:id="@+id/asr_text"
                android:textSize="12sp"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@android:color/black" android:layout_weight="1"
                    android:gravity="fill_vertical" android:singleLine="true" />
                <TextView android:text="@string/maghrib" android:id="@+id/maghrib_text"
                android:textSize="12sp"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@android:color/black" android:layout_weight="1"
                    android:gravity="fill_vertical" android:singleLine="true" />
                <TextView android:text="@string/ishaa" android:id="@+id/ishaa_text"
                android:textSize="12sp"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@android:color/black" android:layout_weight="1"
                    android:gravity="fill_vertical" android:singleLine="true" />
                <TextView android:text="@string/next_fajr" android:id="@+id/next_fajr_text"
                android:textSize="12sp"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@android:color/black" android:layout_weight="1"
                    android:gravity="fill_vertical" android:singleLine="true" />
            </LinearLayout>
            <LinearLayout android:layout_height="fill_parent"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
                android:layout_width="0px" android:orientation="vertical"
                android:layout_weight="2" android:gravity="fill_horizontal">
                <TextView android:id="@+id/fajr" android:layout_width="wrap_content"
                android:textSize="12sp"
                    android:layout_height="wrap_content" android:textColor="@android:color/black"
                    android:layout_weight="1" android:gravity="fill_vertical" />
                <TextView android:id="@+id/sunrise" android:layout_width="wrap_content"
                android:textSize="12sp"
                    android:layout_height="wrap_content" android:textColor="@android:color/black"
                    android:layout_weight="1" android:gravity="fill_vertical" />
                <TextView android:id="@+id/dhuhr" android:layout_width="wrap_content"
                    android:textSize="12sp"
                    android:layout_height="wrap_content" android:textColor="@android:color/black"
                    android:layout_weight="1" android:gravity="fill_vertical" />
                <TextView android:id="@+id/asr" android:layout_width="wrap_content"
                    android:textSize="12sp"
                    android:layout_height="wrap_content" android:textColor="@android:color/black"
                    android:layout_weight="1" android:gravity="fill_vertical" />
                <TextView android:id="@+id/maghrib" android:layout_width="wrap_content"
                    android:textSize="12sp"
                    android:layout_height="wrap_content" android:textColor="@android:color/black"
                    android:layout_weight="1" android:gravity="fill_vertical" />
                <TextView android:id="@+id/ishaa" android:layout_width="wrap_content"
                    android:textSize="12sp"
                    android:layout_height="wrap_content" android:textColor="@android:color/black"
                    android:layout_weight="1" android:gravity="fill_vertical" />
                <TextView android:id="@+id/next_fajr" android:layout_width="wrap_content"
                    android:textSize="12sp"
                    android:layout_height="wrap_content" android:textColor="@android:color/black"
                    android:layout_weight="1" android:gravity="fill_vertical" />
            </LinearLayout>
            <LinearLayout android:layout_height="fill_parent"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
                android:layout_width="wrap_content" android:orientation="vertical">
                <TextView android:id="@+id/fajr_am_pm"
                    android:textSize="10sp"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@android:color/black" android:layout_weight="1"
                    android:gravity="fill_vertical" android:maxLength="2" />
                <TextView android:id="@+id/sunrise_am_pm"
                    android:textSize="10sp"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@android:color/black" android:layout_weight="1"
                    android:gravity="fill_vertical" android:maxLength="2" />
                <TextView android:id="@+id/dhuhr_am_pm"
                    android:textSize="10sp"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@android:color/black" android:layout_weight="1"
                    android:gravity="fill_vertical" android:maxLength="2" />
                <TextView android:id="@+id/asr_am_pm" android:layout_width="wrap_content"
                    android:textSize="10sp"
                    android:layout_height="wrap_content" android:textColor="@android:color/black"
                    android:layout_weight="1" android:gravity="fill_vertical"
                    android:maxLength="2" />
                <TextView android:id="@+id/maghrib_am_pm"
                    android:textSize="10sp"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@android:color/black" android:layout_weight="1"
                    android:gravity="fill_vertical" android:singleLine="true"
                    android:maxLength="2" />
                <TextView android:id="@+id/ishaa_am_pm"
                    android:textSize="10sp"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@android:color/black" android:layout_weight="1"
                    android:gravity="fill_vertical" android:singleLine="true"
                    android:maxLength="2" />
                <TextView android:id="@+id/next_fajr_am_pm"
                    android:textSize="10sp"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@android:color/black" android:layout_weight="1"
                    android:gravity="fill_vertical" android:singleLine="true"
                    android:maxLength="2" />
            </LinearLayout>
            <LinearLayout android:layout_height="fill_parent"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
                android:layout_width="wrap_content" android:orientation="vertical">
                <TextView android:id="@+id/fajr_marker"
                    android:textSize="12sp"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@android:color/black" android:layout_weight="1"
                    android:gravity="fill_vertical" />
                <TextView android:id="@+id/sunrise_marker"
                    android:textSize="12sp"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@android:color/black" android:layout_weight="1"
                    android:gravity="fill_vertical" />
                <TextView android:id="@+id/dhuhr_marker"
                    android:textSize="12sp"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@android:color/black" android:layout_weight="1"
                    android:gravity="fill_vertical" />
                <TextView android:id="@+id/asr_marker"
                    android:textSize="12sp"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@android:color/black" android:layout_weight="1"
                    android:gravity="fill_vertical" />
                <TextView android:id="@+id/maghrib_marker"
                    android:textSize="12sp"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@android:color/black" android:layout_weight="1"
                    android:gravity="fill_vertical" />
                <TextView android:id="@+id/ishaa_marker"
                    android:textSize="12sp"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@android:color/black" android:layout_weight="1"
                    android:gravity="fill_vertical" />
                <TextView android:id="@+id/next_fajr_marker"
                    android:textSize="12sp"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@android:color/black" android:layout_weight="1"
                    android:gravity="fill_vertical" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>